force-app/zurich-base/main/default/objects/Special_Condition__c/Special_Condition__c.object-meta.xml
<CustomObject>
    <label>Condición especial</label>
    <nameField>
        <label>Condition Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condiciones especiales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>