force-app/zurich-base/main/default/objects/Special_Condition__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Special Conditions</relationshipLabel>
    <relationshipName>Special_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>