force-app/zurich-base/main/default/objects/Special_Condition__c/fields/BusinessCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessCode__c</fullName>
    <label>Business Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>