force-app/zurich-base/main/default/objects/Special_Condition__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Specials Conditions</relationshipLabel>
    <relationshipName>SpecialsConditions</relationshipName>
    <type>Lookup</type>
</CustomField>