force-app/zurich-base/main/default/objects/Special_Condition__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>(OCS) Detalle de la condición especial</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>