force-app/zurich-base/main/default/objects/Special_Condition__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>(OCS) Fecha en la que vence la condición especial</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>