force-app/zurich-base/main/default/objects/Special_Condition__c/fields/InfoSpecialConditionCode__c.field-meta.xml
<CustomField>
    <fullName>InfoSpecialConditionCode__c</fullName>
    <description>(OCS) Identificador de la condición</description>
    <externalId>true</externalId>
    <label>INFO Special Condition Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>