force-app/zurich-base/main/default/objects/Special_Condition__c/fields/LongDescription__c.field-meta.xml
<CustomField>
    <fullName>LongDescription__c</fullName>
    <label>Long Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>