force-app/zurich-base/main/default/objects/Special_Condition__c/fields/PolicyCode__c.field-meta.xml
<CustomField>
    <fullName>PolicyCode__c</fullName>
    <label>Policy Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>