force-app/zurich-base/main/default/objects/Special_Condition__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <label>Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>