force-app/zurich-base/main/default/objects/Special_Condition__c/fields/SharepointLinks__c.field-meta.xml
<CustomField>
    <fullName>SharepointLinks__c</fullName>
    <label>Sharepoint Links</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>