force-app/zurich-base/main/default/objects/Special_Condition__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>(OCS) Fecha en la que entra en vigor la condición especial</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>