force-app/zurich-base/main/default/objects/Special_Condition__c/fields/TerritorialDirection__c.field-meta.xml
<CustomField>
    <fullName>TerritorialDirection__c</fullName>
    <label>Territorial Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>